--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-<link rel="stylesheet" href="styles.31d6cfe0d16ae931b73c.css"></head>
+<link rel="stylesheet" href="https://ashwinmulky.github.io/styles.31d6cfe0d16ae931b73c.css"></head>
 <body>
   <app-root></app-root>
-<script src="runtime.a86c627cfa210301c96d.js" defer></script><script src="polyfills.82380a0af12e89c82b35.js" defer></script><script src="main.417b25acd6dd4882626f.js" defer></script>
+<script src="https://ashwinmulky.github.io/runtime.a86c627cfa210301c96d.js" defer></script><script src="https://ashwinmulky.github.io/polyfills.82380a0af12e89c82b35.js" defer></script><script src="https://ashwinmulky.github.io/main.417b25acd6dd4882626f.js" defer></script>
 
 </body></html>
